correctly set up the UI for cache settings

BUG: 323449